# xcar_0.0.1

./: README.md
1.hardware/: 12.8电滑环.SLDPRT  Fan.SLDPRT  PM2205带后盖.SLDPRT  TT马达_客户3D图.SLDPRT  XCAR.SLDASM  body_1.SLDPRT  m3_25_6螺母柱.SLDPRT  m3_5_6螺母柱.SLDPRT  m3_7_3螺母柱.SLDPRT  前装甲.SLDPRT  反麦轮60 mm.SLDPRT  后装甲.SLDPRT  后装甲2.SLDPRT  整机.SLDASM  电池.SLDPRT  钣金底板.SLDPRT  顶板.SLDPRT  麦轮60 mm.SLDPRT
1.hardware/50mm风扇/: Fan base.SLDPRT  Fan blade.SLDPRT  Fan.SLDASM
1.hardware/PCB/: BOM_电源管理_PCB1_2_2022-07-07.xlsx
1.hardware/加工文件/: 前装甲.STEP  反麦轮60 mm.STEP  后装甲.STEP  后装甲2.STEP  钣金底板.STEP  顶板.DXF  麦轮60 mm.STEP
2.software/GPIO/gpio_rewrite/: package.xml
2.software/GPIO/gpio_rewrite/include/gpio_rewrite/: gpio_40pin.cpp  gpio_40pin.h
2.software/GPIO/gpio_rewrite/src/: LED.cpp  test_.cpp
2.software/ROS pack/ctrl_main/: CMakeLists.txt  package.xml
2.software/ROS pack/ctrl_main/src/: master.cpp
2.software/ROS pack/gesture_ctrl/: CMakeLists.txt  package.xml
2.software/ROS pack/gesture_ctrl/include/: common.h
2.software/ROS pack/gesture_ctrl/launch/: hobot_gesture_control.launch.py  hobot_hand_gesture_detection.launch.py
2.software/ROS pack/gesture_ctrl/src/: gesture_control_engine.cpp
2.software/ROS pack/gpio_rewrite/: CMakeLists.txt
2.software/ROS pack/gpio_rewrite/src/: time_test.cpp
2.software/ROS pack/holder/: package.xml  setup.cfg  setup.py
2.software/ROS pack/holder/holder/: servo.py
2.software/ROS pack/xcar_msg/: CMakeLists.txt  package.xml
2.software/servo/: servo.ino
